--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,7 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+<oauth
+  site="http://localhost/fumble-mania-rest-backend/web/app_dev.php/oauth/v2/auth"
+  client-id="1_3zov0g3o3fuogko4ockcgkg4cksk4g440woc8wsc400gowoc8k"
+  redirect-uri="http://localhost/fumble-mania-web-frontend/app/"
+  profile-uri="http://localhost/fumble-mania-rest-backend/web/app_dev.php/campaigns"
+  scope="public">
+</oauth>
