--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -1,5 +1,7 @@
-<h1>Tableau de bord</h1>
-<span>Bienvenue {{ user.username }}</span>
-<ul ng-if="campaigns" class="collection">
-    <li ng-repeat="campaign in campaigns" class="collection-item">{{ campaign.title }}</li>
-</ul>
+<section ng-controller="DashboardCtrl">
+    <h1>Tableau de bord</h1>
+    <span>Bienvenue {{ user.username }}</span>
+    <ul ng-if="campaigns.length > 0" class="collection">
+        <li ng-repeat="campaign in campaigns" class="collection-item">{{ campaign.title }}</li>
+    </ul>
+</section>
