--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -1,8 +1,8 @@
-<div ng-controller="SecurityCtrl" class="nav-wrapper">
-    <ul ng-if="isLoged()" id="nav-mobile" class="right hide-on-med-and-down">
+<div ng-controller="SecurityCtrl" class="nav-wrapper container">
+    <ul ng-if="isLoged()" class="right">
         <li><a href="" ng-click="logout()">Déconnexion</a></li>
     </ul>
-    <ul ng-if="isNotLoged()" id="nav-mobile" class="right hide-on-med-and-down">
+    <ul ng-if="isNotLoged()" class="right">
         <li><a href="#/login">Connexion</a></li>
     </ul>
 </div>
